add column to item form and item show

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,12 +11,17 @@
     </div>
   <% end %>
 
-  <div class="mb-3">
+  <div class="mb-3 required">
     <%= form.label :item_name, class: "form-label" %>
     <%= form.text_field :item_name, class: "form-control" %>
   </div>
 
-  <div class="mb-3">
+  <div class="mb-3 required">
+    <%= form.label :price, class: "form-label" %>
+    <%= form.number_field :price, step: :any, class: "form-control" %>
+  </div>
+
+  <div class="mb-3 required">
     <%= form.label :category, class: "form-label" %>
     <%= form.text_field :category, class: "form-control" %>
   </div>
