--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -5,6 +5,12 @@
   </p>
 
   <p>
+    <strong>Price:</strong>
+    <%= item.price %>
+  </p>
+
+
+  <p>
     <strong>Category:</strong>
     <%= item.category %>
   </p>
