add delete button to items

--- a/app/views/deleted_items/edit.html.erb
+++ b/app/views/deleted_items/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Description</h2>
 
-<%= render 'form', deleted_item: @deleted_item %>
+<%= render 'form', deleted_item: @deleted_item, item_url: deleted_path %>
 
 <%= link_to 'Back', deleted_path %>
 
