--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="items">
   <% @items.each do |item| %>
-    <div class="card w-50 mb-2 p-2">
+    <div id="<%= item.id %>" class="card w-50 mb-2 p-2">
       <div class="d-flex justify-content-between w-50">
         <p>
           <strong>Name:</strong>
@@ -15,9 +15,16 @@
       </div>
       <p>
         <%= link_to "Show this item", item %>
+      <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal_<%= item.id %>">
+        Delete
+      </button>
+      <%= render 'deleted_items/form', deleted_item: Item.new, item_url: deleted_items_path, item_id: item.id %>
       </p>
     </div>
   <% end %>
 </div>
 
 <%= link_to "New item", new_item_path, class: 'btn btn-primary' %>
+
+<div class="deleted">
+</div>
