--- a/app/views/deleted_items/_form.html.erb
+++ b/app/views/deleted_items/_form.html.erb
@@ -1,21 +1,38 @@
-<%= form_with(model: deleted_item, url: deleted_path(deleted_item)) do |f| %>
-    <% if deleted_item.errors.any? %>
-        <div class="error-box">
-            <h2><%= pluralize(deleted_item.errors.count, 'error')%></h2>
-            <ul>
-                <% deleted_item.errors.full_messages.each do |message| %>
-                    <li><%= message %></li>
-                <% end %>
-            </ul>
-        </div>
+<!-- Modal -->
+<div class="modal fade" id="modal_<%= item_id %>" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= form_with(model: deleted_item, url: item_url) do |f| %>
+            <% if deleted_item.errors.any? %>
+                <div class="error-box">
+                    <h2><%= pluralize(deleted_item.errors.count, 'error')%></h2>
+                    <ul>
+                        <% deleted_item.errors.full_messages.each do |message| %>
+                            <li><%= message %></li>
+                        <% end %>
+                    </ul>
+                </div>
+            <% end %>
+
+                <div class='mb-3 required'>
+                    <%= f.label :description, class: 'form-label' %>
+                    <%= f.text_area :description, class: 'form-control', required: true, cols: 10, rows: 5 %>
+                </div>
+
+                <div class="mb-3">
+                    <%= f.hidden_field :item_id, value: item_id, class: 'btn btn-primary' %>
+                </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <%= f.submit 'Delete Item', class: 'btn btn-primary' %>
+      </div>
     <% end %>
-
-        <div class='mb-3 required'>
-            <%= f.label :description, class: 'form-label' %>
-            <%= f.text_field :description, class: 'form-control' %>
-        </div>
-
-        <div class="mb-3">
-            <%= f.submit class: 'btn btn-primary' %>
-        </div>
-<% end %>
+    </div>
+  </div>
+</div>
