--- a/app/views/deleted_items/index.html.erb
+++ b/app/views/deleted_items/index.html.erb
@@ -3,6 +3,6 @@
 <% @deleted_items.each do |item| %>
   <%= render item %>
   <%= link_to 'Item', item_path(item.item) %> |
-  <%= link_to 'Edit item', edit_deleted_path(item.item) %> | 
+  <%= link_to 'Edit item', edit_deleted_path(item) %> | 
   <%= link_to 'Undelete', deleted_path(item), method: :delete %>
 <% end %>
