show 'No expire' when item expite date is nil

--- a/app/views/deleted_items/_deleted_item.html.erb
+++ b/app/views/deleted_items/_deleted_item.html.erb
@@ -17,7 +17,7 @@
 
   <p>
     <strong>Expire at:</strong>
-    <%= deleted_item.item.expire_at %>
+    <%= deleted_item.item.expire_at || 'No expire' %>
   </p>
 
    <p>
