--- a/app/views/deleted_items/destroy.js.erb
+++ b/app/views/deleted_items/destroy.js.erb
@@ -2,5 +2,5 @@ $('#deleted_item_<%= @deleted_item.id %>').remove()
 var deletedItems = JSON.parse(localStorage.getItem('deletedItems')) || [];
 var index = deletedItems.findIndex((item) => item.deletedId == <%= @deleted_item.id %>);
 var udpateItems = [...deletedItems.slice(0, index), ...deletedItems.slice(index+1)]
-document.getElementById('items').insertAdjacentHTML('afterbegin', '<%= j render 'shared/item', obj: @deleted_item.item %>');
+document.querySelector('#items > div').insertAdjacentHTML('afterbegin', '<%= j render @deleted_item.item, view: 'index' %>');
 localStorage.setItem('deletedItems', JSON.stringify(udpateItems));
