--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,17 @@
-<h1>Items</h1>
+<section class="row justify-content-around">
+  <div id="items" class="col-md-7">
+    <h2>Items</h2>
+    <div>
+      <% @items.each do |item| %>
+        <%= render item, view: 'index' %>
+      <% end %>
+    </div>
+    <%= link_to "New item", new_item_path, class: 'btn btn-primary' %>
+  </div>
 
-<div id="items">
-  <% @items.each do |item| %>
-    <%= render 'shared/item', obj: item %>
-  <% end %>
-</div>
-
-<%= link_to "New item", new_item_path, class: 'btn btn-primary' %>
-
-<h2 class="mt-3">Items deleted recently:</h2>
-
-<div data-controller="deleted" data-deleted-target="latest" class="deleted row">
-</div>
+  <div data-controller="deleted" class="col-md-3">
+    <h2>Recently deleted items</h2>
+    <div data-deleted-target="latest" class="deleted">
+    </div>
+  </div>
+</section>
