specify view when rendering items

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,4 @@
-<%= render @item %>
+<%= render @item, view: 'show' %>
 
 <div data-controller="items">
   <%= link_to "Edit this item", edit_item_path(@item) %> |
