--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
           <%= link_to 'Deleted items', deleted_items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+          <%= link_to 'Warehouses', warehouses_path, class: 'nav-link' %>
         </li>
       </ul>
       <form class="d-flex">
