show link to warehouse only when view is defined

--- a/app/views/warehouses/_warehouse.html.erb
+++ b/app/views/warehouses/_warehouse.html.erb
@@ -4,5 +4,6 @@
     <p><strong>City:</strong> <%= warehouse.city %></p>
     <p><strong>Address:</strong> <%= warehouse.address %></p>
 </div>
-
-<%= link_to 'show warehouse', warehouse %>
+<% if defined?(view) %>
+  <%= link_to 'show warehouse', warehouse %>
+<% end %>
