--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -3,4 +3,6 @@
 <div class="links">
     <%= link_to 'Edit warehouse', edit_warehouse_path(@warehouse) %>
     <%= link_to 'Back', warehouses_path %>
+
+    <%= button_to 'Destroy', warehouse_path(@warehouse), method: :delete %>
 </div>
