remove required attribute from the name input

--- a/app/views/warehouses/_form.html.erb
+++ b/app/views/warehouses/_form.html.erb
@@ -10,7 +10,7 @@
 
     <div class="mb-3">
         <%= f.label :name, 'Warehouse Name', class: 'form-label' %>
-        <%= f.text_field :name, class: 'form-control', required: true %>
+        <%= f.text_field :name, class: 'form-control' %>
     </div>
 
     <div class="mb-3">
