--- a/app/views/warehouses/index.html.erb
+++ b/app/views/warehouses/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Warehouse List</h2>
 <div class="warehouses">
-    <%= render @warehouses, view: '' %>
+    <%= render @warehouses %>
 </div>
 <%= link_to 'New warehouse', new_warehouse_path %>
