--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,8 +1,7 @@
 :root {
-    --color-primary: #f00;
+    --color-primary: rgb(247, 24, 27);
     --color-secondary: #0f0;
     --color-tertiary: #00f;
-    --color-title: #999393;
-    --color-text-header: hsl(0, 1%, 16%);
+    --color-text-header: #0c1e83;
     --font-family: 'Lato', sans-serif;
 }
