--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <%= link_to 'Shopify', root_path, class: "navbar-brand" %>
+    <%= link_to 'Shopify', root_path, class: 'navbar-brand w-25' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <%= link_to 'Items', items_path, class: "nav-link active" %>
+          <%= active_link_to 'Home', root_path, 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Deleted items', deleted_items_path, class: "nav-link" %>
+          <%= active_link_to 'Items', items_path, 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Warehouses', warehouses_path, class: 'nav-link' %>
+          <%= active_link_to 'Deleted items', deleted_items_path, 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= active_link_to 'Warehouses', warehouses_path, 'nav-link' %>
         </li>
       </ul>
       <form class="d-flex">
