make the brake for phone to 620px

--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,6 +1,6 @@
 @mixin media($breakpoint) {
     @if $breakpoint == phoneAndUp {
-        @media (min-width: 320px) {
+        @media (max-width: 620px) {
             @content;
         }
     }
