--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,10 @@
 @import "components/item";
 @import "components/delete";
 @import "components/turbo-progress-bar";
+@import "components/button";
+@import "components/warehouse";
+
+.links > * {
+    width: auto;
+    max-width: max-content;
+}
