--- a/app/views/warehouse_items/_form.html.erb
+++ b/app/views/warehouse_items/_form.html.erb
@@ -8,12 +8,10 @@
     <% end %>
         <div class="modal-body">
             <div class="mb-3">
-                <%= f.label :item_id, class: "col-form-label" %>
-                <%= f.select :item_id, Item.all.map { |i| [i.item_name, i.id] }, { selected: warehouse_item.item_id }, { prompt: 'Select item', class: 'form-select', required: true } %>
+                <%= f.select :item_id, Item.all.map { |i| [i.item_name, i.id] }, { selected: warehouse_item.item_id, prompt: 'Select item' }, class: 'form-select', required: true  %>
             </div>
             <div class="mb-3">
-                <%= f.label :quantity, class: "col-form-label"%>
-                <%= f.number_field :quantity, class: "form-control" %>
+                <%= f.number_field :quantity, class: "form-control", placeholder: 'Enter Quantity' %>
             </div>
         </div>
         <div class="modal-footer">
