--- a/app/views/warehouse_items/_warehouse_item.html.erb
+++ b/app/views/warehouse_items/_warehouse_item.html.erb
@@ -1,11 +1,11 @@
 <%= turbo_frame_tag dom_id(warehouse_item) do %>
-    <div class="item">
-        <p><%= warehouse_item.item.item_name%></p>
-        <p><%= warehouse_item.item.category%></p>
-        <p><%= warehouse_item.quantity%></p>
-        <p>
-            <%= link_to 'Edit', edit_warehouse_warehouse_item_path(warehouse_item.warehouse, warehouse_item) %>
-            <%= button_to 'Delete', warehouse_warehouse_item_path(warehouse_item.warehouse, warehouse_item), method: :delete %>
-        </p>
+  <div class="item mb-3 border border-secondary rounded m-3 p-3">
+    <p>Category: <%= warehouse_item.item.category%></p>
+    <p>Name: <%= warehouse_item.item.item_name%></p>
+    <p>Quantity: <%= warehouse_item.quantity%></p>
+    <div class="links row">
+      <%= link_to 'Edit', edit_warehouse_warehouse_item_path(warehouse_item.warehouse, warehouse_item), class: 'btn btn-primary' %>
+      <%= button_to 'Delete', warehouse_warehouse_item_path(warehouse_item.warehouse, warehouse_item), method: :delete, class: 'btn btn-danger ' %>
     </div>
+  </div>
 <% end %>
