--- a/app/views/warehouses/_warehouse.html.erb
+++ b/app/views/warehouses/_warehouse.html.erb
@@ -1,8 +1,10 @@
 <%= link_to warehouse_path(warehouse) do %>
-    <div id="<%= dom_id warehouse %>" class="card m-2">
-        <p><strong>Warehouse name:</strong> <%= warehouse.name %></p>
-        <p><strong>Country:</strong> <%= warehouse.country %></p>
-        <p><strong>City:</strong> <%= warehouse.city %></p>
-        <p><strong>Address:</strong> <%= warehouse.address %></p>
+  <div id="<%= dom_id warehouse %>" class="warehouse card m-2">
+    <div class="card-body">
+    <p><strong>Warehouse name:</strong> <%= warehouse.name %></p>
+    <p><strong>Country:</strong> <%= warehouse.country %></p>
+    <p><strong>City:</strong> <%= warehouse.city %></p>
+    <p><strong>Address:</strong> <%= warehouse.address %></p>
     </div>
+  </div>
 <% end %>
