add class to New warehouse button

--- a/app/views/warehouses/index.html.erb
+++ b/app/views/warehouses/index.html.erb
@@ -2,4 +2,4 @@
 <div class="warehouses">
     <%= render @warehouses %>
 </div>
-<%= link_to 'New warehouse', new_warehouse_path %>
+<%= link_to 'New warehouse', new_warehouse_path, class: 'btn btn-primary' %>
