--- a/app/assets/stylesheets/config/_reset.scss
+++ b/app/assets/stylesheets/config/_reset.scss
@@ -20,6 +20,10 @@ body {
   background-image: url('background.webp');
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
 }
 
 h1,
