--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to items", items_path %>
+  <%= link_to "<-- Back", items_path, class: 'btn btn-primary' %>
 </div>
