--- a/app/views/warehouse_items/_warehouse_item.html.erb
+++ b/app/views/warehouse_items/_warehouse_item.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag dom_id(warehouse_item) do %>
-  <div class="item mb-3 border border-secondary rounded m-3 p-3">
+  <div class="warehouse-item mb-3 border border-secondary rounded m-3 p-3">
     <p>Category: <%= warehouse_item.item.category%></p>
     <p>Name: <%= warehouse_item.item.item_name%></p>
     <p>Quantity: <%= warehouse_item.quantity%></p>
