--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream_from 'warehouse_items'%>
-<section class="show-warehouse">
+<section class="warehouse-show">
   <h2>Warehouse name: <%= @warehouse.name %></h2>
   <div class="row mb-4 justify-content-center">
     <div class="head col-sm-7 row me-3 border border-primary rounded">
